<resources>
    <string name="app_name">iTodoList</string>
    <string name="login_name">Login</string>
    <string name="registration_name">Registration</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="user_name">Логин</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_delete">Удалить</string>
    <string name="task_name">Task</string>
    <string name="task_title">Заголовок задачи</string>
    <string name="task_content">Контент задачи</string>
    <string name="save">save</string>
    <string name="email">email</string>
    <string name="username_error">Логин не может быть пустым</string>
    <string name="password_error">Пароль не может быть пустым</string>
    <string name="email_error">Email не может быть пустым</string>
    <string name="title_error">Заголовок не может быть пустым</string>
    <string name="error_retrieving_data">Ошибка получения данных</string>
    <string name="data_response_null">Нет данных для отображения</string>
    <string name="task_deleted">Задача удалена</string>
</resources>
